Fix image alignment and hide meta in announcements

--- a/src/scss/_index_sections.scss
+++ b/src/scss/_index_sections.scss
@@ -76,6 +76,15 @@
       font-size: 1.2em;
     }
 
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .meta {
+      display: none;
+    }
+
     .emoji {
       height: 1.1em;
     }
